     to be before -lsocket.

312) In load_interfaces(), close sock after bwe are done with it.  Leak
     noticed by Mike Kienenberger <mkienenb@arsc.edu>.

313) Missing pieces from change #308; from Mike Kienenberger.

314) Real Kerberos 5 support from Frank Cusack <fcusack@iconnet.net>.

315) FWTK 'authsrv' support from Kevin Kadow <kadow@MSG.NET>.

316) Fixed handling and documentation of -with-umask.

317) If the check for socket() or inet_addr() fails, retry, this time
     linking with both -lsocket and -lnsl for those systems that
     have interlibrary dependencies.

Sudo 1.5.8 released.

318) Add dirfd() macro for systems without it.

319) Better check for socket() in -lsocket -lnsl in configure.

320) Minor configure fixes.

Sudo 1.5.8p1 released.

321) Fixed a bug wrt quoting characters in command args.

322) Make --without-sendmail work.

Sudo 1.5.8p2 released.

323) Fixed a segv if HOST_IN_LOG defined and gethostbyname() fails.
     Reported by Gero Treuner <gero@faveve.uni-stuttgart.de>.

324) Fixed a parse bug wrt the ! operator and runas specs.  Noted by
     David A Beck <BKD@payserv.telekurs.com>.

325) Use new emalloc/erealloc/estrdup functions (catch errors and exit).

326) New PAM code that should work on both Solaris and Linux.

327) Make sudo's usage info better when mutually exclusive args are given
     and don't rely on argument order to detect this.  From Nick Andrew.

328) In visudo, shift return value of system() by 8 to get the real exit value.

Sudo 1.5.9 released.

329) The runas user and NOPASSWD tags are now persistent across entries
     in a command list (ie: cmnd1,cmnd2,cmnd3).  A PASSWD tag has been
     added to reverse NOPASSWD.  The runas user and *PASSWD tags can be
     overridden on a per-command basis at which point they become the
     new default for the rest of the list.

330) It is now possible to use the '!' operator in a runas list as
     well as in a Cmnd_Alias, Host_Alias and User_Alias.