@@ -1,77 +1,0 @@
-/*
- *  CU sudo version 1.6 -- allows users to execute commands as root and others
- *  Copyright (c) 1991  The Root Group, Inc.
- *  Copyright (c) 1994,1996,1998,1999 Todd C. Miller <Todd.Miller@courtesan.com>
- *
- *  Please send bugs, changes, problems to sudo-bugs@courtesan.com
- *
- *  This program is free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 1, or (at your option)
- *  any later version.
- *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *
- *******************************************************************
- *
- *  This module contains strdup() for those systems without it.
- *
- *  Jeff Nieusma  Thu Mar 21 23:11:23 MST 1991
- */
-
-#include "config.h"
-
-#include <stdio.h>
-#ifdef STDC_HEADERS
-#include <stdlib.h>
-#endif /* STDC_HEADERS */
-#ifdef HAVE_STRING_H
-#include <string.h>
-#endif /* HAVE_STRING_H */
-#ifdef HAVE_STRINGS_H
-#include <strings.h>
-#endif /* HAVE_STRINGS_H */
-#if defined(HAVE_MALLOC_H) && !defined(STDC_HEADERS)
-#include <malloc.h>
-#endif /* HAVE_MALLOC_H && !STDC_HEADERS */
-
-#include "compat.h"
-
-#ifndef STDC_HEADERS
-#ifndef __GNUC__		/* gcc has its own malloc */
-extern VOID *malloc	__P((size_t));
-#endif /* __GNUC__ */
-extern char *strcpy	__P((char *, const char *));
-#endif /* !STDC_HEADERS */
-
-#ifndef lint
-static const char rcsid[] = "$Sudo$";
-#endif /* lint */
-
-
-/******************************************************************
- *
- *  strdup()
- *
- *  this function returns a pointer a string copied into 
- *  a malloc()ed buffer
- */
-
-char * strdup(s1)
-    const char * s1;
-{
-    register char * s;
-
-    if ((s = (char *) malloc(strlen(s1) + 1)) == NULL)
-	return(NULL);
-
-    (void) strcpy(s, s1);
-    return(s);
-}
